[A]新增webpack+群规则group+内置规则+pick

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
         "module": "commonjs",
         "noImplicitAny":true,
         "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": ".",
+        "paths": {
+            "*":["lib/*"]
+        }
     },
+    "exclude": ["node_modules"],
     "include": ["./lib"]
 }
