--- a/package.json
+++ b/package.json
@@ -4,17 +4,37 @@
   "license": "MIT",
   "author": "kaxio",
   "scripts": {
-    "build": "webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "analyzer": "cross-env NODE_ENV=analyzer webpack",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash.flattendepth": "^4.7.0",
+    "lodash.frompairs": "^4.0.1",
+    "lodash.head": "^4.0.1",
+    "lodash.isempty": "^4.4.0",
+    "lodash.topairs": "^4.3.0",
     "tapable": "^1.1.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.156",
+    "@types/lodash.flattendepth": "^4.7.6",
+    "@types/lodash.frompairs": "^4.0.6",
+    "@types/lodash.head": "^4.0.6",
+    "@types/lodash.isempty": "^4.4.6",
+    "@types/lodash.topairs": "^4.3.6",
     "@types/tapable": "^1.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "html-webpack-plugin": "^4.3.0",
+    "prettier": "^2.0.5",
+    "ts-loader": "^7.0.5",
+    "typecript": "^0.0.1-security",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
